# spanish-linter

./: install.bash  install.sh  pyproject.toml  readme.md  requirements.txt  uninstall.bash  uninstall.sh
spanish-linter/: __init__.py  cli.py
spanish_linter/: cli.py
